package dmProtoBind;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.cr.properties.proto";
option java_outer_classname = "PropertiesTestProto";

enum EnumType
{
    VAL_A = 0;
    VAL_B = 1;
}
